--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^22.10.1",
     "remeda": "^2.17.4",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
